# stefi-lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
boards/: CMakeLists.txt
boards/nucleo_l476/: board.c  board.h
boards/rohmi_g431/: board.c  board.h
cmake/: target-mcu.cmake
components/display_oled/: CMakeLists.txt  ssd1306.h
components/imu/: CMakeLists.txt  imu.c  imu.h
components/line_sensor/: CMakeLists.txt  line_sensor.c  line_sensor.h
components/motor/: CMakeLists.txt  motor.c  motor.h
components/simple_io/: CMakeLists.txt
examples/1-Blinky/: CMakeLists.txt  blinky.c
examples/2-Test-Elegoo-SensorKit/: CMakeLists.txt
examples/3-BitBang/: CMakeLists.txt
examples/4-TestShell/: CMakeLists.txt
examples/5-TestModules/: CMakeLists.txt  hl_blink.c
examples/6-TestApp/: CMakeLists.txt
examples/7-TestWWDG/: CMakeLists.txt  test_wwdg.c
examples/8-Rohmi-BoardTest/: CMakeLists.txt  boardtest.c
examples/9-StefiBoardTest/: CMakeLists.txt  boardtest.c
include/libstefi/: clock_config.h  dma.h  flash.h  gpio.h  interrupts.h  peripheral.h  systick.h  uart.h  wwdg.h
src/: dma.c  flash.c  peripheral.c  startup.c  systick.c  uart.c  wwdg.c
src/internal/: dma_internal.h  flash_internal.h  rcc_internal.h  systick_internal.h  wwdg_internal.h
tests/L4/: CMakeLists.txt  test_main.c  tests_dma.c
